--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'> 
     <title>Orders</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <!-- Load the stylesheets -->
+    <link rel="stylesheet" type="css/text" href="/public/css/bootstrap-combined.no-icons.min.css">
+    <link rel="stylesheet" href="/public/css/BaseStyle.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+    <!-- Load some fonts from google -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" type="text/css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,300italic,400italic,600italic,700italic" type="text/css">
+    <!-- Load jQuery and bootstrap -->
+        <script src="/public/js/jquery-1.10.2.min.js"></script>
+        <script src="/public/js/bootstrap.min.js"></script>
   </head>
   <body>
+    <!-- First add the mobile friendly navigation bar -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="/public/index.html">
+            Mutable Learning</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li><a href="/public/index.html">Home</a>
+              </li>
+              <li><a href="/public/about.html">About us</a></li>
+              <li class="active"><a href="#">Orders</a></li>
+              <li><a href="/public/contact.html">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+    <!-- Now add the content -->
     <div class="container">
       <h2>Coinbase orders</h2>
       <table class="table table-striped">
