Added demo page, fixed references to it on the other pages. The contact us page is merged into the about us page

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -33,7 +33,7 @@
               </li>
               <li><a href="/public/about.html">About us</a></li>
               <li class="active"><a href="#">Orders</a></li>
-              <li><a href="/public/contact.html">Contact</a></li>
+              <li><a href="/public/demo.html">Demo</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
