Added the sticky footer to all the web pages with the exception of the main page

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -16,6 +16,7 @@
         <script src="/public/js/bootstrap.min.js"></script>
   </head>
   <body>
+    <div class="wrapper">
     <!-- First add the mobile friendly navigation bar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -60,11 +61,12 @@
              <% } %>
       </table>
       <a href="/refresh_orders">Refresh orders from coinbase</a>
-      <br><br>
+        <div class="push"></div>
     </div>
+    </div> <!--/wrapper-->
     <!-- Put this under a CC By-SA 3.0 license. -->
     <!-- http://creativecommons.org/licenses/ -->
-      <div class="row-fluid footer">
+    <div class="row-fluid footer">
         <div class="span12">
           <p>This work is licensed under
             the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
