--- a/public/css/BaseStyle.css
+++ b/public/css/BaseStyle.css
@@ -66,8 +66,13 @@
     .asset {
         padding: 2.5% 0%;
     }
+    .push {
+        height:60px;
+    }
     .footer {
+        height:60px;
         color: #CCCCCC;
+        background-color: #f5f5f5;
         text-align: center;
     }
     .footer p{
@@ -81,4 +86,17 @@
     div.addthis_toolbox {
         width:180px;
         margin: 0 auto;
+    }
+    /* Added the sticky footer */
+    html,
+    body {
+        height: 100%;
+    /* The html and body elements cannot have any padding or margin. */
+    }
+    /* Wrapper for page content to push down footer */
+    .wrapper {
+        min-height: 100%;
+        height: auto !important;
+        /* Negative indent footer by its height */
+        margin: 0 auto -60px;
     }
