--- a/public/css/BaseStyle.css
+++ b/public/css/BaseStyle.css
@@ -100,3 +100,15 @@
         /* Negative indent footer by its height */
         margin: 0 auto -60px;
     }
+    /* Input form template*/
+    .inputForm {
+        position: relative;
+        /*margin: 10px 0;*/
+        padding: 10px 0px 0px 20px;
+        /*padding-top: 10px;*/
+        background-color: #fff;
+        border: 1px solid #ddd;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+    }
